--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -14,6 +14,26 @@
         ngModel name="password" required minlength="6" #pwInput="ngModel">
       <mat-hint align="end"> {{ pwInput.value?.length }} / 6</mat-hint>
     </mat-form-field>
+
+    <mat-form-field>
+      <input
+        matInput
+        placeholder="Your Name"
+        ngModel
+        name="name"
+        required>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-select placeholder="Select Your Role"
+        ngModel
+        name="role"
+        required>
+        <mat-option value="bride">Bride</mat-option>
+        <mat-option value="bridegroom">Bridegroom</mat-option>
+      </mat-select>
+    </mat-form-field>
+
     <mat-form-field>
       <input
         matInput
@@ -26,6 +46,7 @@
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker color="primary"></mat-datepicker>
     </mat-form-field>
+
     <mat-checkbox ngModel name="agree" required>Agree to Terms and Conditions</mat-checkbox>
     <button type="submit" mat-raised-button color="primary"
       [disabled]="f.invalid"
