--- a/src/app/gifts/gifts.component.html
+++ b/src/app/gifts/gifts.component.html
@@ -1,3 +1,7 @@
+<div class="">
+  userLoggedIn$: {{ userLoggedIn$ | async | json}}
+</div>
+
 <div class="example-container mat-elevation-z8"
   (swipeleft)="swipeTable($event.type)"
   (swiperight)="swipeTable($event.type)">
