Implement get default wedding

--- a/src/app/gifts/gifts.component.html
+++ b/src/app/gifts/gifts.component.html
@@ -1,6 +1,9 @@
-<div class="">
+<pre class="">
   userLoggedIn$: {{ userLoggedIn$ | async | json}}
-</div>
+</pre>
+<pre class="">
+  defaultWedding$: {{ defaultWedding$ | async | json}}
+</pre>
 
 <div class="example-container mat-elevation-z8"
   (swipeleft)="swipeTable($event.type)"
