--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -7,7 +7,7 @@
     <mat-icon>input</mat-icon>
     <span class="nav-caption">Login</span>
   </a>
-  <a *ngIf="isAuth$ | async" mat-list-item routerLink="/Gifts" (click)="onClose()">
+  <a *ngIf="isAuth$ | async" mat-list-item routerLink="/gifts" (click)="onClose()">
     <mat-icon>fitness_center</mat-icon>
     <span class="nav-caption">Gifts</span>
   </a>
