Adjust responsive styles

--- a/src/app/gifts/gift-edit-create-dialog/gift-edit-create-dialog.html
+++ b/src/app/gifts/gift-edit-create-dialog/gift-edit-create-dialog.html
@@ -8,6 +8,11 @@
 </div>
 <div mat-dialog-content>
   <mat-form-field>
+    <input matInput [(ngModel)]="data.gift.who" placeholder="Who">
+  </mat-form-field>
+</div>
+<div mat-dialog-content>
+  <mat-form-field>
     <input matInput [(ngModel)]="data.gift.giftName" placeholder="Gift Purchased">
   </mat-form-field>
 </div>
