--- a/src/app/gifts/gifts.component.css
+++ b/src/app/gifts/gifts.component.css
@@ -1,26 +1,46 @@
 .swipe-box {
-    display: block;
-    width: 100%;
-    float: left;
-    margin: 0;
-    transform: .5s ease .1s;
+	display: block;
+	width: 100%;
+	float: left;
+	margin: 0;
+	transform: .5s ease .1s;
 }
 
 .ctn {
-    max-width: 400px;
-    margin: 0 auto;
-    height: 100%;
+	max-width: 400px;
+	margin: 0 auto;
+	height: 100%;
 }
 
 .inner-ctn {
-  margin: 20px;
-  padding: 20px;
+	margin: 20px;
+	padding: 20px;
 }
 
 .visible {
-    display: block;
+	display: block;
 }
 
 .hidden {
-    display: none;
+	display: none;
+}
+
+.mat-header-row,
+.mat-row {
+	padding: 0 0 0 10px;
+}
+
+.gift-title {
+	font-size: 20px;
+	padding: 15px 15px 0 15px;
+	text-align: center;
+}
+
+.action-header,
+.action-cell {
+	text-align: center;
+}
+
+.mat-table {
+	padding: 10px;
 }
