--- a/src/app/gifts/gifts.component.html
+++ b/src/app/gifts/gifts.component.html
@@ -68,12 +68,12 @@
 
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef class="action-header">  
-        <!-- <button mat-icon-button color="accent" (click)="createNew()">
-          <mat-icon>add</mat-icon>
-        </button> -->
-        <button mat-icon-button color="accent" [routerLink]="['/gifts', 'new']" routerLinkActive="active">
+        <button mat-icon-button color="accent" (click)="createNew()">
           <mat-icon>add</mat-icon>
         </button>
+        <!-- <button mat-icon-button color="accent" [routerLink]="['/gifts', 'new']" routerLinkActive="active">
+          <mat-icon>add</mat-icon>
+        </button> -->
       </mat-header-cell>
       <mat-cell *matCellDef="let row" class="action-cell">
         <button mat-icon-button color="accent" *ngIf="!row.editing" focusable="false" (click)="startEdit(row)">
