Add confirmation dialog feature for deletion of gift

--- a/src/app/gifts/gift-form/gift-form.component.html
+++ b/src/app/gifts/gift-form/gift-form.component.html
@@ -24,7 +24,7 @@
       <input matInput formControlName="note" placeholder="Note">
     </mat-form-field>
   </div>
-  <div mat-dialog-actions>
+  <div>
     <button mat-button [routerLink]="['/gifts']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Cancel</button>
     <button mat-button type="submit" [disabled]="!form.valid" cdkFocusInitial>Save</button>
   </div>
